исправлен header и main-nav

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -14,10 +14,12 @@
 <body>
 
   <header class="page-header">
-    <a class="page-header__logo-link" href="index.html" aria-label="Кэт энерджи">
-      <img class="page-header__logo-icon" src="img/icon-logo-mobile.svg" width="33" height="38" alt="Кэт энерджи">
-      <img class="page-header__logo-title" src="img/logo-mobile-header.svg" width="101" height="18" alt="Кэт энерджи">
-    </a>
+    <div class="page-header__logo">
+      <a class="page-header__logo-link" href="index.html" aria-label="Кэт энерджи">
+        <img class="page-header__logo-icon" src="img/icon-logo-mobile.svg" width="33" height="38" alt="Кэт энерджи">
+        <img class="page-header__logo-title" src="img/logo-mobile-header.svg" width="101" height="18" alt="Кэт энерджи">
+      </a>
+    </div>
     <nav class="page-header__main-nav main-nav">
       <button type="button" class="main-nav__toggle"></button>
       <ul class="main-nav__list">
