--- a/source/index.html
+++ b/source/index.html
@@ -9,35 +9,37 @@
   <link href="css/style.css" rel="stylesheet">
 </head>
 
-
 <body>
 
   <header class="page-header">
-    <a class="page-header__logo-link" aria-label="Кэт энерджи">
-      <img class="page-header__logo-icon" src="img/icon-logo-mobile.svg" width="33" height="38" alt="Кэт энерджи">
-      <img class="page-header__logo-title" src="img/logo-mobile-header.svg" width="101" height="18" alt="Кэт энерджи">
-    </a>
-    <nav class="page-header__main-nav main-nav">
-      <button type="button" class="main-nav__toggle"></button>
-      <ul class="main-nav__list">
-        <li class="main-nav__item main-nav__item--active"><a>Главная</a></li>
-        <li class="main-nav__item"><a href="catalog.html">Каталог продукции</a></li>
-        <li class="main-nav__item"><a href="form.html">Подбор программы</a></li>
-      </ul>
-    </nav>
-
-    <section class="promo">
-      <div class="promo__header">
-        <h1 class="promo__header-title">Функциональное питание для котов</h1>
-        <h3 class="promo__header-subtitle">Занялся собой? Займись котом!</h3>
+    <div class="page-header__wrapper">
+      <div class="page-header__logo">
+        <a class="page-header__logo-link" aria-label="Кэт энерджи">
+          <img class="page-header__logo-icon" src="img/icon-logo-mobile.svg" width="33" height="38" alt="Кэт энерджи">
+          <img class="page-header__logo-title" src="img/logo-mobile-header.svg" width="101" height="18" alt="Кэт энерджи">
+        </a>
       </div>
-      <div class="promo__image">
-        <img src="img/index-can-mobile@1x.png" width="280" height="270" alt="">
-      </div>
-      <a class="promo__btn btn" href="form.html">Подобрать программу</a>
-    </section>
+      <nav class="page-header__main-nav main-nav">
+        <button type="button" class="main-nav__toggle"></button>
+        <ul class="main-nav__list">
+          <li class="main-nav__item main-nav__item--active"><a>Главная</a></li>
+          <li class="main-nav__item"><a href="catalog.html">Каталог продукции</a></li>
+          <li class="main-nav__item"><a href="form.html">Подбор программы</a></li>
+        </ul>
+      </nav>
+    </div>
   </header>
 
+  <!-- <section class="promo">
+    <div class="promo__text-wrapper">
+      <h1 class="promo__title">Функциональное<br> питание для котов</h1>
+      <h3 class="promo__subtitle">Занялся собой? Займись котом!</h3>
+      <a class="promo__btn btn" href="form.html">Подобрать программу</a>
+    </div>
+    <div class="promo__image-wrapper">
+      <img class="promo__image" src="img/index-can-mobile@1x.png" width="280" height="270" alt="">
+    </div>
+  </section>
 
   <section class="catalog">
     <h2 class="visually-hidden">Продукты</h2>
@@ -149,7 +151,7 @@
         </a>
       </div>
     </div>
-  </footer>
+  </footer> -->
 
 
 </body>
