--- a/source/index.html
+++ b/source/index.html
@@ -30,18 +30,18 @@
     </div>
   </header>
 
-  <!-- <section class="promo">
-    <div class="promo__text-wrapper">
+  <section class="promo">
+    <div class="promo__wrapper">
       <h1 class="promo__title">Функциональное<br> питание для котов</h1>
       <h3 class="promo__subtitle">Занялся собой? Займись котом!</h3>
+      <div class="promo__image-wrapper">
+        <img class="promo__image" src="img/index-can-mobile@1x.png" width="280" height="270" alt="">
+      </div>
       <a class="promo__btn btn" href="form.html">Подобрать программу</a>
-    </div>
-    <div class="promo__image-wrapper">
-      <img class="promo__image" src="img/index-can-mobile@1x.png" width="280" height="270" alt="">
     </div>
   </section>
 
-  <section class="catalog">
+  <!-- <section class="catalog">
     <h2 class="visually-hidden">Продукты</h2>
     <div class="catalog__wrapper">
       <article class="catalog-card">
@@ -59,10 +59,10 @@
         <a class="catalog-card__link" href="#">Каталог Pro</a>
       </article>
     </div>
-  </section>
+  </section> -->
 
 
-  <section class="features">
+  <!-- <section class="features">
     <div class="features__wrapper">
       <h2 class="features__title">Как это работает</h2>
       <ul class="features__list">
@@ -80,10 +80,10 @@
         </li>
       </ul>
     </div>
-  </section>
+  </section> -->
 
 
-  <section class="example">
+  <!-- <section class="example">
     <div class="example__wrapper">
       <h2 class="example__title">Живой пример</h2>
       <div class="example__text">
@@ -116,10 +116,10 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
 
 
-  <section class="contacts">
+  <!-- <section class="contacts">
     <div class="contacts__wrapper">
       <h2 class="contacts__title">Приглашаем к сотрудничеству дилеров!</h2>
       <p class="contacts__address">
@@ -130,10 +130,10 @@
     <div class="contacts__map">
       <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.5991043651586!2d30.320894616097!3d59.938794181876254!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywgMTkxMTg2!5e0!3m2!1sru!2sru!4v1516551475971" width="600" height="450" allowfullscreen></iframe>
     </div>
-  </section>
+  </section> -->
 
 
-  <footer class="page-footer">
+  <!-- <footer class="page-footer">
     <div class="page-footer__wrapper">
       <a class="page-footer__logo" aria-label="logo">
         <img src="img/logo-footer.svg" width="128" height="24" alt="Кэт энерджи">
