--- a/source/index.html
+++ b/source/index.html
@@ -23,7 +23,7 @@
         <button type="button" class="main-nav__toggle"></button>
         <ul class="main-nav__list">
           <li class="main-nav__item main-nav__item--active"><a>Главная</a></li>
-          <li class="main-nav__item"><a href="catalog.html">Каталог продукции</a></li>
+          <li class="main-nav__item"><a href="topic.html">Каталог продукции</a></li>
           <li class="main-nav__item"><a href="form.html">Подбор программы</a></li>
         </ul>
       </nav>
@@ -41,25 +41,25 @@
     </div>
   </section>
 
-  <!-- <section class="catalog">
-    <h2 class="visually-hidden">Продукты</h2>
-    <div class="catalog__wrapper">
-      <article class="catalog-card">
-        <h3 class="catalog-card__title catalog-card__title--slim">Похудение</h3>
-        <div class="catalog-card__text">
+  <section class="topic">
+    <h2 class="visually-hidden">Основные программы</h2>
+    <div class="topic__wrapper">
+      <article class="topic__card">
+        <h3 class="topic__title topic__title--slim">Похудение</h3>
+        <div class="topic__text">
           <p>Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
         </div>
-        <a class="catalog-card__link" href="#">Каталог Slim</a>
+        <a class="topic__link" href="#">Каталог Slim</a>
       </article>
-      <article class="catalog-card">
-        <h3 class="catalog-card__title catalog-card__title--pro">Набор массы</h3>
-        <div class="catalog-card__text">
+      <article class="topic__card">
+        <h3 class="topic__title topic__title--pro">Набор массы</h3>
+        <div class="topic__text topic__text--narrow">
           <p>Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
         </div>
-        <a class="catalog-card__link" href="#">Каталог Pro</a>
+        <a class="topic__link" href="#">Каталог Pro</a>
       </article>
     </div>
-  </section> -->
+  </section>
 
 
   <!-- <section class="features">
