--- a/source/index.html
+++ b/source/index.html
@@ -62,25 +62,37 @@
   </section>
 
 
-  <!-- <section class="features">
-    <div class="features__wrapper">
-      <h2 class="features__title">Как это работает</h2>
-      <ul class="features__list">
-        <li class="features__item features__item--leaf">
-          <p>Функциональное питание содержит только полезные питательные вещества.</p>
+  <section class="advantage">
+    <div class="advantage__wrapper">
+      <h2 class="advantage__title">Как это работает</h2>
+      <ul class="advantage__list">
+        <li class="advantage__item advantage__item--one">
+          <div class="advantage__icon advantage__icon--leaf"></div>
+          <div class="advantage__text">
+            <p>Функциональное питание содержит только полезные питательные вещества.</p>
+          </div>
         </li>
-        <li class="features__item features__item--powder">
-          <p>Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</p>
+        <li class="advantage__item advantage__item--two">
+          <div class="advantage__icon advantage__icon--powder"></div>
+          <div class="advantage__text">
+            <p>Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</p>
+          </div>
         </li>
-        <li class="features__item features__item--dining">
-          <p>Замените один-два приема обычной еды на наше фунцкциональное питание.</p>
+        <li class="advantage__item advantage__item--three">
+          <div class="advantage__icon advantage__icon--dining"></div>
+          <div class="advantage__text">
+            <p>Замените один-два приема обычной еды на наше фунцкциональное питание.</p>
+          </div>
         </li>
-        <li class="features__item features__item--clock">
-          <p>Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</p>
+        <li class="advantage__item advantage__item--four">
+          <div class="advantage__icon advantage__icon--clock"></div>
+          <div class="advantage__text">
+            <p>Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</p>
+          </div>
         </li>
       </ul>
     </div>
-  </section> -->
+  </section>
 
 
   <!-- <section class="example">
